# xencat-light-client

./: .env.example  .gitignore  ASSET_AWARE_IMPLEMENTATION_PLAN.md  ASSET_AWARE_PROGRESS.md  Anchor.toml  BRIDGE_FLOW_FILES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_V3.md  FEE_DISTRIBUTION_CHANGES.md  FINAL_V2_SECURITY_REPORT.md  GITHUB_REPO_STRUCTURE.md  LICENSE  MIGRATION_CHECKLIST.md  NO_ADMIN_DESIGN.md  PROJECT_STATUS.md  PUBLISH_TO_GITHUB.md  README.md  RED_TEAM_TESTS.md  REPO_TREE.txt  SECURITY_AUDIT.md  TESTS.md  V2_MIGRATION_SECURITY_REPORT.md  V3_IMPLEMENTATION_SUMMARY.md  V3_QUICK_REFERENCE.md  check-mint.js  check-state.js  genesis-validators.json  mint-program-init.json  package-lock.json  package.json  solana-validators.json  tsconfig.json  verify-mint-state.js
examples/: v3-complete-flow.ts
metadata/: xencat-metadata.json
programs/dgn-mint-x1/: Cargo.toml
programs/dgn-mint-x1/src/: errors.rs  lib.rs  state.rs
programs/dgn-mint-x1/src/instructions/: create_metadata.rs  initialize.rs  mint_from_burn_v3.rs  mod.rs
programs/solana-light-client-x1/: Cargo.toml
programs/solana-light-client-x1/src/: ed25519_utils.rs  errors.rs  lib.rs  state.rs  verification.rs  verification_new.rs
programs/solana-light-client-x1/src/instructions/: initialize.rs  initialize_validator_set.rs  mod.rs  rotate_validator_config.rs  submit_burn_attestation.rs  submit_burn_attestation_v3.rs  submit_proof.rs  update_validator_set.rs  update_validators.rs  verify_proof.rs
programs/xencat-mint-x1/: Cargo.toml
programs/xencat-mint-x1/src/: errors.rs  lib.rs  state.rs
programs/xencat-mint-x1/src/instructions/: create_metadata.rs  initialize.rs  mint_from_burn.rs  mint_from_burn_v3.rs  mod.rs  transfer_mint_authority.rs
research/: solana_vote_signatures.md
scripts/: bridge-mint.ts  burn-and-bridge-e2e.ts  burn-dgn.ts  burn-only.ts  byzantine-attack-simulation.ts  check-account-state.ts  check-existing-burns.ts  check-metadata-authority.ts  check-metadata.ts  check-mint-authority.ts  check-mint-state-authority.ts  (+81 more)
solana-burn-program/: Cargo.toml
solana-burn-program/src/: lib.rs
(+30 files in other folders)
