[package]
name = "xencat-burn"
version = "0.1.0"
description = "XENCAT Token Burn Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xencat_burn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
