[package]
name = "solana-light-client-x1"
version = "0.1.0"
description = "Generic Solana light client for proof verification on X1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_light_client_x1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Development mode - allows mock signatures for testing
# WARNING: Never enable this in production
dev-mode = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
sha2 = "0.10.8"
